correctly aligned its contents

--- a/rest-countries-app/src/app/Home/sub-header/sub-header.component.css
+++ b/rest-countries-app/src/app/Home/sub-header/sub-header.component.css
@@ -62,7 +62,7 @@ input {
   display: flex;
   align-items: center;
   gap: 47px;
-  margin-left: 65px;
+  margin-left: 41px;
 }
 
 .caret {   
