--- a/rest-countries-app/src/app/header/header.component.css
+++ b/rest-countries-app/src/app/header/header.component.css
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   gap: 6px;
-  margin-right: 88px;
+  margin-right: 111px;
 }
 
 .colorIcon {
